--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>SpecialK/SpecialKEvalBeta @ GitHub</title>
+  <title>kennethshackleton/SKPokerEval @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -31,41 +31,37 @@
 </head>
 
 <body>
-  <a href="http://github.com/SpecialK/SpecialKEvalBeta"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/kennethshackleton/SKPokerEval"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/SpecialK/SpecialKEvalBeta/zipball/master">
+      <a href="http://github.com/kennethshackleton/SKPokerEval/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/SpecialK/SpecialKEvalBeta/tarball/master">
+      <a href="http://github.com/kennethshackleton/SKPokerEval/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/SpecialK/SpecialKEvalBeta">SpecialKEval</a>
-      <span class="small">by <a href="http://github.com/SpecialK">SpecialK</a></span></h1>
+    <h1><a href="http://github.com/kennethshackleton/SKPokerEval">SKPokerEval</a>
+      <span class="small">by <a href="http://github.com/kennethshackleton">SKPokerEval</a></span></h1>
 
     <div class="description">
-      7-card Texas Hold'em hand evaluators currently available in Objective-C, Java, C++ and Python
+      A lightweight 32-bit Texas Hold'em 7-card hand evaluator written in C++.
     </div>
-
-    <h2>Contact</h2>
-<p>SpecialK (codingfeedback@gmail.com)<br/>      </p>
-
 
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/SpecialK/SpecialKEvalBeta/zipball/master">zip</a> or
-      <a href="http://github.com/SpecialK/SpecialKEvalBeta/tarball/master">tar</a> formats.
+      <a href="http://github.com/kennethshackleton/SKPokerEval/zipball/master">zip</a> or
+      <a href="http://github.com/kennethshackleton/SKPokerEval/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/SpecialK/SpecialKEvalBeta</pre>
+      <pre>$ git clone git://github.com/kennethshackleton/SKPokerEval</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/SpecialK/SpecialKEvalBeta">SpecialK/SpecialKEvalBeta</a>
+      get the source code on GitHub : <a href="http://github.com/kennethshackleton/SKPokerEval">kennethshackleton/SKPokerEval</a>
     </div>
 
   </div>
